syntax="proto3";

package com.university.userservice.grpc.academicsubject;
option java_multiple_files = true;
option java_package = "com.university.userservice.grpc.academicsubject";

message AcademicSubjectRequest {
  string title = 1;
  string direction = 2;
  string teacherId = 3;
  string teacherFullName = 4;
}

message AcademicSubjectResponse {
  string academicSubjectId = 1;
}

service AcademicSubjectService {
  rpc createAcademicSubject(AcademicSubjectRequest) returns (AcademicSubjectResponse);
}